[package]
name = "sysquery"
version = "0.8.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A tool to find large files, get system information, expensive processes, and get network input and outputs."
repository = "https://github.com/rustaceanrob/sysquery"
categories = ["command-line-interface", "system", "networks", "file", "file-explorer"]
authors = ["Robert Netzke"]
exclude = ["Cargo.lock", "LICENSE", "target/debug/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = [ "derive" ]}
colored = "2.0.4"
sysinfo = "0.29.10"
walkdir = "2.4.0"


